--- a/_posts/tumblr/2013-01-09-bible-challenge-book.html
+++ b/_posts/tumblr/2013-01-09-bible-challenge-book.html
@@ -6,7 +6,7 @@ body-class: 'blog'
 tags:
 - work
 - thoughts
-- 100-day-bible-challenge
+- 100 Day Bible Challenge
 - update
 tumblr_url: http://blog.richwells.me/post/40169053310/biblechallengebook
 video: "<div class='fitvids'>
