--- a/_posts/tumblr/2014-03-13-wooden-kitchen.html
+++ b/_posts/tumblr/2014-03-13-wooden-kitchen.html
@@ -10,7 +10,7 @@ tags:
 - making-things
 - craft
 - daddy-daycare
-- photos
+- work
 tumblr_url: http://blog.richwells.me/post/79449589163/wooden-kitchen
 img: wooden-kitchen.jpg
 intro: "<p>Last Christmas we were going to buy our daughter Sophie a toy Kitchen. She loves anything kitchen related, and we needed somewhere to store her ever growing collection of fake food.</p>
