--- a/_posts/tumblr/2014-09-09-sketches-of-spain.html
+++ b/_posts/tumblr/2014-09-09-sketches-of-spain.html
@@ -7,10 +7,9 @@ tags:
 - sketches
 - mallorca
 - holiday
-- work
 - ipad-art
 tumblr_url: http://blog.richwells.me/post/97037316408/sketches-of-spain
-img: 'sketches-of-spain.jpg'
+img: 'sketches-of-spain-1.jpg'
 intro: "<p>A few sketches and iPad doodles from a week away in Mallorca.</p>"
 ---
 <p>A few sketches and iPad doodles from a week away in Mallorca.</p>
