--- a/_posts/tumblr/2011-11-29-100daybiblechallenge.html
+++ b/_posts/tumblr/2011-11-29-100daybiblechallenge.html
@@ -7,6 +7,7 @@ tags:
 - illustration
 - work
 - update
+- 100 Day Bible Challenge
 tumblr_url: http://blog.richwells.me/post/40198861966/100daybiblechallenge
 img: /tumblr_files/tumblr_mgfirgt0vH1rr6vpvo4_1280.jpg
 intro: "<p><span>I&#8217;ve been involved in a project at my church called 100 Day Bible Challenge. We&#8217;re currently reading through 100 key parts of the Bible every day for 100 days and I am hoping to do a bit of daily artwork inspired by what we&#8217;ve read. Its been great so far- we have 360 people on the </span><a href='http://www.facebook.com/groups/286637061359303'>Facebook group</a><span> and loads of discussions going on. Check the </span><a href='http://100daybiblechallenge.com/'>website</a><span> for more details.</span></p>"
