--- a/_posts/tumblr/2012-03-30-paper-53.html
+++ b/_posts/tumblr/2012-03-30-paper-53.html
@@ -6,7 +6,7 @@ body-class: 'blog'
 tags:
 - illustration
 - ipad-art
-- thoughts
+- sketches
 tumblr_url: http://blog.richwells.me/post/40172445404/really-enjoying-using-paper-for-ipad-check-their
 img: /tumblr_files/tumblr_mgew3wqNV11rr6vpvo1_1280.jpg
 ---
