--- a/_posts/tumblr/2012-11-23-my-dads-movember-effort.html
+++ b/_posts/tumblr/2012-11-23-my-dads-movember-effort.html
@@ -9,4 +9,4 @@ tags:
 tumblr_url: http://blog.richwells.me/post/40203066739/my-dads-movember-effort
 img: /tumblr_files/tumblr_mgfl6gux3Q1rr6vpvo1_1280.jpg
 ---
-<img src="/tumblr_files/tumblr_mgfl6gux3Q1rr6vpvo1_1280.jpg"/>
+<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mgfl6gux3Q1rr6vpvo1_1280.jpg"/>
