--- a/_posts/tumblr/2013-01-09-bible-challenge-book.html
+++ b/_posts/tumblr/2013-01-09-bible-challenge-book.html
@@ -13,6 +13,10 @@ video: "<div class='fitvids'>
   <iframe src='//player.vimeo.com/video/53417575?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='100 Day Bible Challenge Book' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 "
+thumbnail: "<div class='fitvids'>
+  <iframe src='//player.vimeo.com/video/53417575?title=0&byline=0&portrait=0' width='400' height='225' frameborder='0' title='100 Day Bible Challenge Book' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+"
 ---
 <div class="fitvids">
   <iframe src="//player.vimeo.com/video/53417575?title=0&byline=0&portrait=0" width="400" height="225" frameborder="0" title="100 Day Bible Challenge Book" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
