--- a/_posts/tumblr/2013-04-18-be-disciplined.html
+++ b/_posts/tumblr/2013-04-18-be-disciplined.html
@@ -11,6 +11,7 @@ tumblr_url: http://blog.richwells.me/post/71651405014/be-disciplined-work-hard-b
 intro: "<blockquote>Be disciplined. Work hard. Be prepared to hear ‘no’ a lot and don’t care…Be prepared to have a lot of people not enjoy your work and have it not bother you; you should do it because you want to do it.</blockquote>
 <p>Oliver Jeffers</p>
 "
+thumbnail: quote-1.jpg
 ---
 <blockquote>Be disciplined. Work hard. Be prepared to hear ‘no’ a lot and don’t care…Be prepared to have a lot of people not enjoy your work and have it not bother you; you should do it because you want to do it.</blockquote>
 <p>Oliver Jeffers</p>
