--- a/about/index.html
+++ b/about/index.html
@@ -25,11 +25,11 @@ body-class: about nav-fixed inverted
           </div>
         </li>
         <li>
-          <a href="http://blog.richwells.me" class="listy-left" target="_blank">
+          <a href="{{ site.baseurl }}/" class="listy-left">
             <img src="{{ site.baseurl }}/img/blog-tn.jpg" alt="My blog">
           </a>
           <div class="listy-right">
-            I spend lots of time drawing, taking photos, coding things and telling stories. <a href="http://blog.richwells.me">My blog</a> records what I get up to and what I’m working on.
+            I spend lots of time drawing, taking photos, coding things and telling stories. <a href="{{ site.baseurl }}/">My blog</a> records what I get up to and what I’m working on.
 
           </div>
         </li>
