--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-body-class: blog
+body-class: blog blog-index
 ---
 <div class="tag-everything">
-  {% include tag-links.html %}  
+  {% include tag-links.html %}
 </div>
 
 
