--- a/_posts/tumblr/2013-09-02-learn-by-doing.html
+++ b/_posts/tumblr/2013-09-02-learn-by-doing.html
@@ -8,5 +8,6 @@ tags:
 - quotes
 tumblr_url: http://blog.richwells.me/post/71649733698/mainly-play-the-things-on-the-piano-which-please
 intro: " <p>Albert Einstein’s Advice to His Son:</p> <blockquote>Mainly play the things on the piano which please you, even if the teacher does not assign those. That is the way to learn the most, that when you are doing something with such enjoyment that you don’t notice that the time passes. I am sometimes so wrapped up in my work that I forget about the noon meal</blockquote>"
+thumbnail: learn-by-doing.jpg
 ---
 <blockquote>Mainly play the things on the piano which please you, even if the teacher does not assign those. That is the way to learn the most, that when you are doing something with such enjoyment that you don’t notice that the time passes. I am sometimes so wrapped up in my work that I forget about the noon meal</blockquote>Albert Einstein’s Advice to His Son
