improve about nav for mobiles

--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: blank
-body-class: about nav-fixed inverted
+body-class: about nav-inverted nav-absolute
 ---
 <div class="about-header">
   <div class="hello-wrap">
