update google tasks blog post

--- a/_posts/2014-11-22-better-google-tasks.html
+++ b/_posts/2014-11-22-better-google-tasks.html
@@ -19,27 +19,43 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
 
 <p>I’ve tried most of the popular todo list apps out there and the one I keep coming back to is Google Tasks. It’s simple, free, saves to my Gmail account so I don’t need to log into anything else, and it works with loads of different mobile apps, meaning my tasks are everywhere and always synced.</p>
 
-<p>The trouble is, there’s no real good way of using Google Tasks in a desktop browser.</p>
+<p>The trouble is, there’s no decent looking way of using Google Tasks in a desktop browser. This is their curent design:</p>
 
-<div class="grid wide">
-    <div class="col-1-2">
-      <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
-    </div>
-    <div class="col-1-2">
-      <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" />
-    </div>
-</div>
+<img src="{{ site.baseurl }}/downloads/bgt-before.jpg" class="small" alt=" The current Google Tasks" />
 
-<p>Image of screenshot</p>
 
-<p>Google stopped developing their tasks browser app years ago and it looks pretty dated now, and not a great thing to look at for long periods of time.</p>
+<p>Google stopped developing their tasks browser app a few years ago and it looks pretty dated now. Not a great thing to look at for long periods of time (which I do as I use it for work).</p>
 
-<p>I decided to add my own styles on top of Google Tasks, just for me really. I wanted to make a thing I stare at every day better and easier to use. I took away some of the noise, made certain things more useable and generally made it more satisfying to check off tasks.</p>
+<p>I decided to add my own styles on top of Google Tasks, just for me really. I wanted to make a thing I stare at every day better and easier to use. I took away some of the noise, made certain things more  clear and legible and generally made it more satisfying to check off tasks.</p>
 
 <img src="{{ site.baseurl }}/downloads/better-google-tasks.jpg" alt="Better Google Tasks" class="wide" />
 
-<p>It’s not amazing, the code is pretty horrible and there are loads of things I’d like to improve, but it’s a bit better.</p>
+<p>I've had a few iterations of the design. The earlier versions looked a lot more impressive, but then I realised that I needed to make something that I didn't notice. This isn't a site homepage, it's a tool, and the important thing is that I can clearly see what I need to do and when I need to do it.
+</p>
+<img src="{{ site.baseurl }}/downloads/bgt-1.jpg" alt="Better Google Tasks" class="wide" />
+<p>
+  I probably spent most time styling the completed tasks. I wanted to make it feel satisfying and instant to check stuff off, so I removed images that might take some time to load and made CSS checkboxes (which look much sharper on retina screens too).
+</p>
 
-<p>My friend Matt turned my styles into a browser extension, which was very kind of him. If you use Google Chrome you can have it for free here:</p>
 
-<p>Download Better Google Tasks</p>
+<div class="grid wide">
+  <div class="col-1-2">
+    <img src="{{ site.baseurl }}/downloads/bgt-2.jpg" alt=" The current Google Tasks" />
+  </div>
+  <div class="col-1-2">
+    <img src="{{ site.baseurl }}/downloads/bgt-3.jpg" alt="Better Google Tasks" />
+  </div>
+</div>
+
+
+
+<p>It’s still a work in progress, the code is pretty horrible and there are loads of things I’d like to improve, but it’s a bit better.</p>
+
+<p>My friend <a href="https://twitter.com/matkins">Matt</a> turned my styles into a browser extension, which was very kind of him. If you use Google Chrome you can have it for free here:</p>
+
+<p>
+  <a href="https://chrome.google.com/webstore/detail/better-google-tasks/denjcdefjebbmlihdoojnebochnkgcin" class="btn">Download Better Google Tasks</a>
+</p>
+<p>
+  Want to find out more about this project? <a href="http://richwells.me/better-google-tasks/"> Here's a little brochure/help site</a>.
+</p>
