style all posts link

--- a/_posts/2014-10-15-blessed-are-those-who-mourn.html
+++ b/_posts/2014-10-15-blessed-are-those-who-mourn.html
@@ -7,6 +7,7 @@ img: blessed-are-those-who-mourn.jpg
 intro: "A couple of illustrations I did for one of Bry's talks at church. Enjoyed making things out of paper, just for the fun of it."
 tags:
 - keynote
+- sketches
 - illustration
 - faith
 ---
