--- a/_posts/tumblr/2013-06-26-elefriends.html
+++ b/_posts/tumblr/2013-06-26-elefriends.html
@@ -10,23 +10,25 @@ tags:
 img: elefriends.jpg
 
 ---
-<div class="grid wide">
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/elefriends.jpg"/>
+<img src="{{ site.baseurl }}/downloads/elefriends.jpg" class="w100"/>
+
+<p>
+  One of the most rewarding and well-used projects I've worked on at <a href="http://yoomee.com">Yoomee</a>, Elefriends is an online community for people who struggle with mental health issues. A closed, safe space for people to be real and to support others.
+</p>
+<p>
+  Like <a href="{{ site.baseurl }}/blog/vinspired">vInspired</a>, we started this project as a small prototype and developed it gradually over time, testing, learning and making it better. I was involved with design, UX and front-end build.
+</p>
+<p>
+  Here's a little introduction to Elefriends, narrated by Stephen Fry:
+<p>
+  <div class='fitvids'>
+    <iframe src='//player.vimeo.com/video/60585844' width='500' height='281' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mp295ohtmi1rr6vpvo2_r1_1280.jpg"/>
-  </div>
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mp295ohtmi1rr6vpvo3_r1_1280.jpg"/>
-  </div>
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mp295ohtmi1rr6vpvo4_r1_1280.jpg"/>
-  </div>
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mp295ohtmi1rr6vpvo6_r1_1280.jpg"/>
-  </div>
-  <div class="col-1-2">
-    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_mp295ohtmi1rr6vpvo5_r1_1280.jpg"/>
-  </div>
-</div>
+
+  <p>
+    <a href="http://elefriends.org.uk/" class="btn">visit elefriends.org.uk</a>
+  </p>
+
+  <p>
+    Also, <a href="http://www.theguardian.com/society/christmas-charity-appeal-2014-blog/2014/dec/05/-sp-elefriends-the-social-network-for-the-mental-health-community" target="blank">here's an article </a> about Elefriends in the Guardian.
+  </p>
