--- a/_posts/tumblr/2014-03-14-yoomee-dot-com.html
+++ b/_posts/tumblr/2014-03-14-yoomee-dot-com.html
@@ -10,4 +10,15 @@ tags:
 - work
 img: yoomee-site.jpg
 ---
+
 <img src="{{ site.baseurl }}/downloads/yoomee-site.jpg" alt="yoomee.com">
+<p>One of the frustrations of having so much work on at the moment is that we have little time to update our site. The other week we had a little window in between projects and managed to push a few changes. More to come!</p>
+
+<p><a href="http://yoomeee.com" class="cta">Visit yoomee.com</a></p>
+
+<div class="video-container wide">
+  <video id="bgvid" muted="" autoplay="" loop="" poster="{{ site.baseurl }}/downloads/yoomee-poster.jpg">
+    <source src="{{ site.baseurl }}/downloads/yoomee.webm"  type="video/webm" codecs="vp8,vorbis"></source>
+    <source src="{{ site.baseurl }}/downloads/yoomee.mp4" type="video/mp4" codecs="avc1.42E01E"></source>
+  </video>
+</div>
