--- a/about/index.html
+++ b/about/index.html
@@ -41,6 +41,7 @@ body-class: about nav-inverted nav-absolute
             On Tuesdays I take the day off to explore the world with my daughter Sophie. Each week we do something new and share it on our <a href="http://dayoffwithsophie.tumblr.com/" target="_blank">Daddy Daycare blog</a>.
           </div>
         </li>
+        {% comment %}
         <li>
           <a href="http://100daybiblechallenge.com" class="listy-left" target="_blank">
             <img src="{{ site.baseurl }}/img/100-tn.jpg" alt="Day off with Sophie">
@@ -49,7 +50,13 @@ body-class: about nav-inverted nav-absolute
             I like a challenge. A while back I created 100 illustrations over 100 days for a project I set up at my church. You can download all the images for free <a href="http://100daybiblechallenge.com" target="_blank">here.</a>
           </div>
         </li>
+        {% endcomment %}
       </ul>
+
+      <p class="get-in-touch center">
+        <a href="mailto:rich@yoomee.com" class="cta">Get in touch</a> or
+        <a href="{{ site.baseurl }}/tag/work" class="cta">check out my work</a>
+      </p>
 
   </div>
 
