updating content, changing base url

--- a/_posts/2014-11-22-better-google-tasks.html
+++ b/_posts/2014-11-22-better-google-tasks.html
@@ -15,7 +15,8 @@ intro: "I’m kind of in love with Todo lists, which is a bit sad really. I make
 
 <p>I’m kind of in love with Todo lists, which is a bit sad really. I make lists all the time and love ticking things off. Sometimes I write things that I’ve already done, just to put a line through it.</p>
 
-<p><del>Write a blog post</del></p>
+<img src="{{ site.baseurl }}/downloads/bgt-completed.jpg" class="small" alt=" Write a blog post (completed)" />
+
 
 <p>I’ve tried most of the popular todo list apps out there and the one I keep coming back to is Google Tasks. It’s simple, free, saves to my Gmail account so I don’t need to log into anything else, and it works with loads of different mobile apps, meaning my tasks are everywhere and always synced.</p>
 
