--- a/_posts/tumblr/2014-03-14-yoomee-dot-com.html
+++ b/_posts/tumblr/2014-03-14-yoomee-dot-com.html
@@ -12,7 +12,7 @@ img: yoomee-site.jpg
 ---
 
 <img src="{{ site.baseurl }}/downloads/yoomee-site.jpg" alt="yoomee.com">
-<p>One of the frustrations of having so much work on at the moment is that we have little time to update our site. The other week we had a little window in between projects and managed to push a few changes. More to come!</p>
+<p>One of the frustrations of having so much work on at the moment is that we have little time to update our site. The other week we had a small window in between projects and managed to push a few changes. More to come!</p>
 
 <p><a href="http://yoomeee.com" class="cta">Visit yoomee.com</a></p>
 
