--- a/_posts/tumblr/2011-06-06-holiday-sketches.html
+++ b/_posts/tumblr/2011-06-06-holiday-sketches.html
@@ -7,6 +7,7 @@ tags:
 - sketches
 - sketchbooks
 - art
+- travels
 tumblr_url: http://blog.richwells.me/post/40516717803/holiday-sketches
 img: /tumblr_files/tumblr_mgmb5kgxVq1rr6vpvo1_1280.jpg
 intro: "<p><span>Some sketches I did last week whilst on holiday. Enjoyed getting away from emails and the internet, I should do it more often! </span></p>"
