--- a/_posts/tumblr/2011-07-28-les-alpes.html
+++ b/_posts/tumblr/2011-07-28-les-alpes.html
@@ -7,6 +7,7 @@ tags:
 - video
 - cycling
 - france
+- travels
 tumblr_url: http://blog.richwells.me/post/40516670435/les-alpes
 img: les-alpes.jpg
 video: "<div class='fitvids'>
