--- a/_posts/tumblr/2011-09-22-ndsm-wharf.html
+++ b/_posts/tumblr/2011-09-22-ndsm-wharf.html
@@ -6,8 +6,9 @@ body-class: 'blog'
 tags:
 - photos
 - amsterdam
+- travels
 tumblr_url: http://blog.richwells.me/post/40172839967/ndsm-wharf
-img: /tumblr_files/tumblr_mgewmzJVf41rr6vpvo3_1280.jpg
+img: /tumblr_files/tumblr_mgewmzJVf41rr6vpvo5_1280.jpg
 intro: "<p><span>The NDSM Wharf is a really cool place that has an old Shipyard building warehouse, which has been transformed into a skatepark and customised portacabins for 250+ artists. It&#8217;s a really interesting/inspiring/random place to walk around if you are ever in Amsterdam.</span></p>"
 ---
 
