--- a/_posts/tumblr/2011-12-05-terracotta-army.html
+++ b/_posts/tumblr/2011-12-05-terracotta-army.html
@@ -7,6 +7,7 @@ tags:
 - photos
 - china
 - xian
+- travels
 - terracotta army
 tumblr_url: http://blog.richwells.me/post/71643887391/terracotta-army
 img: /tumblr_files/tumblr_mymoidF3Qu1rr6vpvo1_1280.jpg
