--- a/_posts/tumblr/2014-01-16-tf-bloggers-2014.html
+++ b/_posts/tumblr/2014-01-16-tf-bloggers-2014.html
@@ -7,6 +7,7 @@ tags:
 - tearfund
 - cambodia
 - tfbloggers
+- travels
 tumblr_url: http://blog.richwells.me/post/73526049519/tf-bloggers-2014
 img: /tumblr_files/tumblr_mzi9tc3NGq1rr6vpvo1_1280.jpg
 ---
