--- a/_posts/tumblr/2014-03-18-arrived-in-phnom-penh.html
+++ b/_posts/tumblr/2014-03-18-arrived-in-phnom-penh.html
@@ -8,6 +8,7 @@ tags:
 - phnom pehn
 - cambodia
 - tfbloggers
+- travels
 img: phnom-penh.jpg
 tumblr_url: http://blog.richwells.me/post/79968183794/arrived-in-phnom-penh
 ---
