--- a/_posts/tumblr/2014-03-19-tuol-sleng.html
+++ b/_posts/tumblr/2014-03-19-tuol-sleng.html
@@ -6,6 +6,7 @@ body-class: 'blog'
 tags:
 - tfbloggers
 - cambodia
+- travels
 img: tuol-sleng.jpg
 tumblr_url: http://blog.richwells.me/post/80086511538/umoja
 ---
