--- a/_posts/tumblr/2014-03-20-day-three-in-cambodia.html
+++ b/_posts/tumblr/2014-03-20-day-three-in-cambodia.html
@@ -7,6 +7,7 @@ tags:
 - tfbloggers
 - cambodia
 - photos
+- travels
 img: day-3.jpg
 intro: Today was amazing. We went out of the city and visited two communities that Tearfund supports by providing Umoja training. In both places we met the facilitators who work with the local church to develop small projects that help the people around them. It was really inspiring and great to see first hand what people can do when they work together.
 ---
