--- a/_posts/tumblr/2014-03-23-tonle-batie.html
+++ b/_posts/tumblr/2014-03-23-tonle-batie.html
@@ -9,7 +9,7 @@ tags:
 - photos
 - tearfund
 - travels
-img: tonle-batie.jpg
+img: /tumblr_files/tumblr_n2wjyiYje51rr6vpvo3_1280.jpg
 tumblr_url: http://blog.richwells.me/post/80490518301/tonle-batie
 intro: "<p>We&#8217;ve just come back from a two day trip to Tonle Batie, a village an hour or so out of Phnom Penh. No wifi, no 3G, and a great opportunity to spend quality time with some generous people who don&#8217;t always have it easy.</p>"
 ---
@@ -19,13 +19,13 @@ intro: "<p>We&#8217;ve just come back from a two day trip to Tonle Batie, a vill
 
 <div class="grid wide">
   <div class="col-1-3">
-    <img src="http://ir0.mobify.com/300/http://richwells.github.io{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo1_1280.jpg"/>
+    <img src="http://ir0.mobify.com/300/http://richwells.me{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo1_1280.jpg"/>
   </div>
   <div class="col-1-3">
-    <img src="http://ir0.mobify.com/300/http://richwells.github.io{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo3_1280.jpg"/>
+    <img src="http://ir0.mobify.com/300/http://richwells.me{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo3_1280.jpg"/>
   </div>
   <div class="col-1-3">
-    <img src="http://ir0.mobify.com/300/http://richwells.github.io{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo5_1280.jpg"/>
+    <img src="http://ir0.mobify.com/300/http://richwells.me{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo5_1280.jpg"/>
   </div>
 </div>
 
@@ -41,14 +41,18 @@ intro: "<p>We&#8217;ve just come back from a two day trip to Tonle Batie, a vill
 <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo7_1280.jpg"/>
 <p>Had a bit of a nightmare when I got back when I realised that my camera wouldn&#8217;t load the photos onto my mac. Thought I&#8217;d lost them all, but after 2 hours of fiddling I&#8217;ve managed to find a way round it (turns out it was a broken lead, phew!). </p>
 <p>I&#8217;ll be posting stories from Tonle Batie over the next couple of days to <strong><a href="http://cambodia.richwells.me">my scrapbook</a></strong>.</p>
-<img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo6_1280.jpg"/>
+
+
+
 
 <div class="grid wide">
   <div class="col-1-2">
-    <img src="http://ir0.mobify.com/600/http://richwells.github.io{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo8_1280.jpg"/>
+    <img src="http://ir0.mobify.com/600/http://richwells.me{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo8_1280.jpg"/>
+    <img src="{{ site.baseurl }}/downloads/tonle-batie.jpg"/>
   </div>
   <div class="col-1-2">
-    <img src="http://ir0.mobify.com/600/http://richwells.github.io{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo2_1280.jpg"/>
+    <img src="http://ir0.mobify.com/600/http://richwells.me{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo2_1280.jpg"/>
+    <img src="{{ site.baseurl }}/downloads/tumblr_files/tumblr_n2wjyiYje51rr6vpvo6_1280.jpg"/>
   </div>
 </div>
 
