--- a/_posts/tumblr/2014-04-03-art-for-cambodia.html
+++ b/_posts/tumblr/2014-04-03-art-for-cambodia.html
@@ -8,6 +8,7 @@ tags:
 - tfbloggers
 - tearfund
 - cycling
+- travels
 
 tumblr_url: http://blog.richwells.me/post/81636311339/art-for-cambodia
 img: cambodian-artwork.jpg
