--- a/_posts/tumblr/2014-09-15-the-four-knows-of-creativity.html
+++ b/_posts/tumblr/2014-09-15-the-four-knows-of-creativity.html
@@ -8,7 +8,7 @@ tags:
 - creativity
 - tearfund
 - keynote
-- tfbloggers
+- work
 - thoughts
 tumblr_url: http://blog.richwells.me/post/97562644683/the-four-knows-of-creativity
 intro: "Last weekend I did a talk at the Tearfund Rhythms Visual Communication day. I shared a bit of my story and a few things that I’ve found helpful to know when creating and communicating.
