--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,8 @@
 ---
 layout: blank
 body-class: about nav-inverted nav-absolute
+head-content: "<meta property='og:image'
+content='http://richwells.me/downloads/rw-share.jpg' />"
 ---
 <div class="about-header">
   <div class="hello-wrap">
