--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 body-class: blog blog-index
+head-content: "<meta property='og:image'
+content='http://richwells.me/downloads/rw-share.jpg' />"
 ---
 <div class="tag-everything">
   {% include tag-links.html %}
