add sofa blog and sheffield digital

--- a/_posts/2015-11-27-designing-a-sofa.html
+++ b/_posts/2015-11-27-designing-a-sofa.html
@@ -181,3 +181,7 @@ Still not sure what to do with it in the end - I’m considering open sourcing t
   <li><a href="http://www.cundys.co.uk/" target="blank">Cundy Upholstery</a></li>
   <li>The Barbican, for their excellent exhibition: <a href="http://www.barbican.org.uk/artgallery/event-detail.asp?ID=18398" target="blank">"The World of Charles and Ray Eames"</a></li>
 </ul>
+
+<p>
+  I also posted this to <a href="https://medium.com/@richwells/building-a-plywood-sofa-c30882f50bf5#.n0j890d95">Medium</a>.
+</p>
